--- a/ombi.web.config
+++ b/ombi.web.config
@@ -9,9 +9,9 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="ReverseProxyInboundPlexRequests" stopProcessing="true">
+                <rule name="ReverseProxyInboundOMBI" stopProcessing="true">
                     <match url="(.*)" />
-                    <action type="Rewrite" url="http://192.168.1.20:3579/plexrequest/{R:1}" />
+                    <action type="Rewrite" url="http://localhost:5000/OMBI/{R:1}" />
                     <serverVariables>
                         <set name="host" value="$host" />
                         <set name="HTTP_X_FORWARDED_HOST" value="$server_name" />
@@ -24,9 +24,10 @@
             </rules>
             <outboundRules>
                 <clear />
-                <rule name="ReverseProxyOutboundPlexRequest" preCondition="ResponseIsHtml1">
-                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://192.168.1.20:3579/plexrequest/(.*)" />
-                    <action type="Rewrite" value="http{R:1}://seanvree.com/plexrequest/{R:2}" />
+                <rule name="ReverseProxyOutboundOMBI" preCondition="ResponseIsHtml1">
+                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://localhost:5000/OMBI/(.*)" />
+                     <!-- CHANGE DOMAIN BELOW -->
+                    <action type="Rewrite" value="http{R:1}://yourdomain.com/OMBI/{R:2}" />
                 </rule>
             </outboundRules>
         </rewrite>
@@ -35,9 +36,5 @@
             </authentication>
         </security>
         <urlCompression doStaticCompression="false" doDynamicCompression="false" />
-        <httpErrors>
-            <error statusCode="403" subStatusCode="6" path="C:\inetpub\wwwroot\Maintenance\maintenance.html" responseMode="File" />
-            <error statusCode="404" subStatusCode="503" path="/maintenance/maintenance.html" responseMode="ExecuteURL" />
-        </httpErrors>
     </system.webServer>
 </configuration>
