--- a/ombi.web.config
+++ b/ombi.web.config
@@ -11,30 +11,50 @@
                 <clear />
                 <rule name="ReverseProxyInboundOMBI" stopProcessing="true">
                     <match url="(.*)" />
-                    <action type="Rewrite" url="http://localhost:5000/OMBI/{R:1}" />
+                    <action type="Rewrite" url="http://localhost:3579/plexrequest/{R:1}" />
                     <serverVariables>
                         <set name="host" value="$host" />
                         <set name="HTTP_X_FORWARDED_HOST" value="$server_name" />
                         <set name="HTTP_X_REAL_IP" value="$remote_addr" />
                         <set name="HTTP_X_FORWARDED_FOR" value="$proxy_add_x_forwarded_for" />
                         <set name="HTTP_X_FORWARDED_PROTO" value="$scheme" />
-                        <set name="HTTP_X_ORIGINAL_ACCEPT_ENCODING" value="{HTTP_ACCEPT_ENCODING}" />
+                        <set name="HTTP_X_FORWARDED_SSL" value="on" />
                     </serverVariables>
+                    <conditions trackAllCaptures="true">
+                    </conditions>
                 </rule>
             </rules>
             <outboundRules>
                 <clear />
-                <rule name="ReverseProxyOutboundOMBI" preCondition="ResponseIsHtml1">
-                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://localhost:5000/OMBI/(.*)" />
-                     <!-- CHANGE DOMAIN BELOW -->
-                    <action type="Rewrite" value="http{R:1}://yourdomain.com/OMBI/{R:2}" />
+                <rule name="Restore Encoding" preCondition="Restore HTTP_ACCEPT_ENCODING}" enabled="true">
+                    <match serverVariable="HTTP_ACCEPT_ENCODING" pattern="^(.+)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="true" />
+                    <action type="Rewrite" value="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" />
                 </rule>
+                <rule name="ReverseProxyOutboundOMBI" preCondition="ResponseIsHtml1" enabled="true" stopProcessing="false">
+                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://localhost:3579/plexrequest/(.*)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+                        <add input="{HTTP_REFERER}" pattern="/plexrequest" />
+                    </conditions>
+                    <action type="Rewrite" value="http{R:1}://<yourdomain>.com/plexrequest/{R:2}" />
+                </rule>
+
+				<preConditions>
+					<preCondition name="ResponseIsHtml1">
+						<add input="{RESPONSE_CONTENT_TYPE}" pattern="^text/html" />
+					</preCondition>
+					<preCondition name="Restore HTTP_ACCEPT_ENCODING}">
+                        <add input="{RESPONSE_CONTENT_TYPE}" pattern=".+" />
+					</preCondition>
+				</preConditions>
+
             </outboundRules>
         </rewrite>
         <security>
             <authentication>
             </authentication>
         </security>
-        <urlCompression doStaticCompression="false" doDynamicCompression="false" />
+        <urlCompression doStaticCompression="true" doDynamicCompression="false" />
+        <httpRedirect enabled="false" destination="http://yourdomain.com:3579" exactDestination="true" />
     </system.webServer>
 </configuration>
