--- a/ombi.web.config
+++ b/ombi.web.config
@@ -3,7 +3,6 @@
     <system.webServer>
         <defaultDocument>
             <files>
-                <remove value="index.html" />
             </files>
         </defaultDocument>
         <rewrite>
@@ -11,7 +10,7 @@
                 <clear />
                 <rule name="ReverseProxyInboundOMBI" stopProcessing="true">
                     <match url="(.*)" />
-                    <action type="Rewrite" url="http://localhost:3579/plexrequest/{R:1}" />
+                    <action type="Rewrite" url="http://localhost:5000/ombi/{R:1}" />
                     <serverVariables>
                         <set name="host" value="$host" />
                         <set name="HTTP_X_FORWARDED_HOST" value="$server_name" />
@@ -32,20 +31,22 @@
                     <action type="Rewrite" value="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" />
                 </rule>
                 <rule name="ReverseProxyOutboundOMBI" preCondition="ResponseIsHtml1" enabled="true" stopProcessing="false">
-                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://localhost:3579/plexrequest/(.*)" />
+                    <match filterByTags="A, Area, Base, Form, Frame, Head, IFrame, Img, Input, Link, Script" pattern="^http(s)?://localhost:5000/ombi/(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-                        <add input="{HTTP_REFERER}" pattern="/plexrequest" />
+                        <add input="{HTTP_REFERER}" pattern="/ombi" />
                     </conditions>
-                    <action type="Rewrite" value="http{R:1}://<yourdomain>.com/plexrequest/{R:2}" />
+                    <action type="Rewrite" value="http{R:1}://YOURDOMAIN.com/ombi/{R:2}" />
                 </rule>
-		<preConditions>
-			<preCondition name="ResponseIsHtml1">
-				<add input="{RESPONSE_CONTENT_TYPE}" pattern="^text/html" />
-			</preCondition>
-			<preCondition name="Restore HTTP_ACCEPT_ENCODING}">
-                        	<add input="{RESPONSE_CONTENT_TYPE}" pattern=".+" />
-			</preCondition>
-		</preConditions>
+
+				<preConditions>
+					<preCondition name="ResponseIsHtml1">
+						<add input="{RESPONSE_CONTENT_TYPE}" pattern="^text/html" />
+					</preCondition>
+					<preCondition name="Restore HTTP_ACCEPT_ENCODING}">
+                        <add input="{RESPONSE_CONTENT_TYPE}" pattern=".+" />
+					</preCondition>
+				</preConditions>
+
             </outboundRules>
         </rewrite>
         <security>
@@ -53,6 +54,5 @@
             </authentication>
         </security>
         <urlCompression doStaticCompression="true" doDynamicCompression="false" />
-        <httpRedirect enabled="false" destination="http://yourdomain.com:3579" exactDestination="true" />
     </system.webServer>
 </configuration>
